# ircc-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ircc_tracker/: __init__.py  cli.py  client.py
src/ircc_tracker/certs/: ircc_api_intermediates.pem
tests/: test_client.py
